--- a/musicbook/src/App.css
+++ b/musicbook/src/App.css
@@ -51,7 +51,7 @@ button:hover {
 }
 
 .music-container {
-   border: 1px black solid;
+   /* border: 1px black solid; */
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -62,10 +62,10 @@ button:hover {
 }
 
 .rate {
-   width: 30%;
+   width: 80%;
    display: flex;
    align-items: center;
-   justify-content: space-between;
+   justify-content: space-around;
 }
 
 .myButton {
@@ -83,7 +83,7 @@ button:hover {
 }
 
 .delup {
-   width: 50%;
+   width: 80%;
 }
 
 .delup button {
