--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@ button:hover {
    justify-content: space-around;
 }
 
+.small-rate {
+   display: none;
+}
+
 .myButton {
    color: red;
 }
@@ -88,4 +92,52 @@ button:hover {
 
 .delup button {
    width: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+   /* For tablets: */
+   .rate {
+      display: none;
+   }
+
+   .small-rate {
+      display: inline-block;
+      width: 90%;
+   }
+
+   .like-dislike {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: space-around;
+   }
+
+   .yt {
+      width: 100%;
+      height: 500px;
+   }
+}
+
+@media screen and (max-width: 600px) {
+   /* For phones: */
+   .rate {
+      display: none;
+   }
+
+   .small-rate {
+      display: inline-block;
+      width: 80%;
+   }
+
+   .like-dislike {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: space-around;
+   }
+
+   .yt {
+      width: 100%;
+      height: 300px;
+   }
 }
